--- a/src/patternfly/demos/Page/page-template-horizontal-subnav.hbs
+++ b/src/patternfly/demos/Page/page-template-horizontal-subnav.hbs
@@ -1,4 +1,4 @@
-{{#> page-main-nav page-main-nav--IsLimitWidth="true" page-main-nav--modifier=page-template-horizontal-subnav--modifier}}
+{{#> page-main-subnav page-main-subnav--IsLimitWidth="true" page-main-subnav--modifier=page-template-horizontal-subnav--modifier}}
   {{#> nav nav--HasScroll="true" nav--IsHorizontalSubnav="true" nav--IsScrollable="true" nav--attribute='aria-label="Local"'}}
     {{#> nav-list}}
       {{#> nav-item}}
@@ -28,4 +28,4 @@
       {{/nav-item}}
     {{/nav-list}}
   {{/nav}}
-{{/page-main-nav}}
+{{/page-main-subnav}}
