--- a/src/patternfly/components/Table/table-th.hbs
+++ b/src/patternfly/components/Table/table-th.hbs
@@ -5,7 +5,7 @@
   {{#if table-th--IsSortable}} {{pfv}}table__sort{{/if}}
   {{#if table-th--IsStickyLeft}} {{pfv}}table__sticky-cell pf-m-left{{/if}}
   {{#if table-th--IsStickyRight}} {{pfv}}table__sticky-cell pf-m-right{{/if}}
-  {{#if table-th--toggle}} {{pfv}}table__toggle{{/if}}
+  {{#if table-th--IsToggle}} {{pfv}}table__toggle{{/if}}
   {{#if table-th--check}} {{pfv}}table__check{{/if}}
   {{#if table-th--action}} {{pfv}}table__action{{/if}}
   {{#if table-th--icon}} {{pfv}}table__icon{{/if}}
