--- a/src/patternfly/components/Table/templates/table--action.hbs
+++ b/src/patternfly/components/Table/templates/table--action.hbs
@@ -1,4 +1,2 @@
-{{#> table-td table-td--action="true"}}
-  {{!-- Use content of {empty string} to avoid passing @partial-block to dropdown --}}
-  {{#> dropdown dropdown--id=(concat table--id '-dropdown-kebab-' table-tr--index) dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}{{/dropdown}}
-{{/table-td}}
+{{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--aria-label='Table Actions'}}
+{{!-- TODO: add small variant to menu toggle --}}
