--- a/src/patternfly/components/Table/templates/table-tr--basic.hbs
+++ b/src/patternfly/components/Table/templates/table-tr--basic.hbs
@@ -8,7 +8,5 @@
       <a href="#">siemur/test-space</a>
     {{/if}}
   {{/table-th}}
-  {{#> table-td table-td--action="true"}}
-    {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-selectable-' table-tr--basic--index) dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-  {{/table-td}}
+  {{#> table-td table-td--action="true"}}{{/table-td}}
 {{/table-tr}}
