--- a/src/patternfly/components/MenuToggle/menu-toggle.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle.hbs
@@ -43,6 +43,9 @@
       disabled
     {{/if}}
   {{/unless}}
+  {{#if menu-toggle--aria-label}}
+    aria-label={{menu-toggle--aria-label}}
+  {{/if}}
   {{#if menu-toggle--id}}
     id="{{menu-toggle--id}}"
   {{/if}}
@@ -69,7 +72,7 @@
   {{/if}}
   {{#ifAny menu-toggle--IsPlain @partial-block}}
     {{#if menu-toggle--HasKebab}}
-      <i class="fas fa-ellipsis-v" aria-hidden=true></i>
+      {{> menu-toggle-icon menu-toggle--icon='ellipsis-v'}}
     {{else if menu-toggle--UsesButton}}
       {{#> button button--IsPlain=true button--icon='ellipsis-v' button--IsDisabled=menu-toggle--IsDisabled button--IsAriaDisabled=menu-toggle--IsAriaDisabled button--IsExpanded=menu-toggle--IsExpanded button--aria-label='Actions'}}{{/button}}
     {{/if}}
