--- a/src/patternfly/components/OverflowMenu/overflow-menu-control.hbs
+++ b/src/patternfly/components/OverflowMenu/overflow-menu-control.hbs
@@ -3,39 +3,44 @@
     {{{overflow-menu-control--attribute}}}
   {{/if}}>
 
-  <div class="{{pfv}}dropdown{{#if dropdown--IsExpanded}} pf-m-expanded{{/if}}{{#if dropdown--modifier}} {{dropdown--modifier}}{{/if}}"
-    {{#if dropdown--attribute}}
-      {{{dropdown--attribute}}}
-    {{/if}}>
-    {{#if overflow-menu-control--IsControl}}
-      {{#> button button--modifier="pf-v5-c-dropdown__toggle pf-m-plain pf-m-control" button--attribute=(concat 'id="' overflow-menu--id '-dropdown-toggle" aria-label="' overflow-menu-button--aria-label '" aria-expanded="' overflow-menu-button--aria-expanded '"')}}
-        {{#if dropdown--icon}}
-          <i class="fas {{dropdown--icon}}" aria-hidden="true"></i>
-        {{else}}
-          {{> dropdown-kebab-icon}}
-        {{/if}}
-      {{/button}}
-    {{else}}
-      {{#> button button--modifier="pf-v5-c-dropdown__toggle pf-m-plain" button--attribute=(concat 'id="' overflow-menu--id '-dropdown-toggle" aria-label="' overflow-menu-button--aria-label '" aria-expanded="' overflow-menu-button--aria-expanded '"')}}
-        {{#if dropdown-icon}}
-          <i class="fas {{dropdown--icon}}" aria-hidden="true"></i>
-        {{else}}
-          {{> dropdown-kebab-icon}}
-        {{/if}}
-      {{/button}}
-    {{/if}}
-    {{#if overflow-menu--UsesMenu}}
-      {{> @partial-block}}
-    {{else}}
-      <ul class="{{pfv}}dropdown__menu{{#if dropdown-menu--modifier}} {{dropdown-menu--modifier}}{{/if}}"
-        role="menu"
-        aria-labelledby="{{overflow-menu--id}}-dropdown-toggle"
-        {{#unless dropdown--IsExpanded}}hidden{{/unless}}
-        {{#if dropdown-menu--attribute}}
-          {{{dropdown-menu--attribute}}}
-        {{/if}}>
+  {{#unless overflow-menu--UsesMenuToggle}}
+    <div class="{{pfv}}dropdown{{#if dropdown--IsExpanded}} pf-m-expanded{{/if}}{{#if dropdown--modifier}} {{dropdown--modifier}}{{/if}}"
+      {{#if dropdown--attribute}}
+        {{{dropdown--attribute}}}
+      {{/if}}>
+      {{#if overflow-menu-control--IsControl}}
+        {{#> button button--modifier="pf-v5-c-dropdown__toggle pf-m-plain pf-m-control" button--attribute=(concat 'id="' overflow-menu--id '-dropdown-toggle" aria-label="' overflow-menu-button--aria-label '" aria-expanded="' overflow-menu-button--aria-expanded '"')}}
+          {{#if dropdown--icon}}
+            <i class="fas {{dropdown--icon}}" aria-hidden="true"></i>
+          {{else}}
+            {{> dropdown-kebab-icon}}
+          {{/if}}
+        {{/button}}
+      {{else}}
+        {{#> button button--modifier="pf-v5-c-dropdown__toggle pf-m-plain" button--attribute=(concat 'id="' overflow-menu--id '-dropdown-toggle" aria-label="' overflow-menu-button--aria-label '" aria-expanded="' overflow-menu-button--aria-expanded '"')}}
+          {{#if dropdown-icon}}
+            <i class="fas {{dropdown--icon}}" aria-hidden="true"></i>
+          {{else}}
+            {{> dropdown-kebab-icon}}
+          {{/if}}
+        {{/button}}
+      {{/if}}
+      {{#if overflow-menu--UsesMenu}}
         {{> @partial-block}}
-      </ul>
-    {{/if}}
-  </div>
+      {{else}}
+        <ul class="{{pfv}}dropdown__menu{{#if dropdown-menu--modifier}} {{dropdown-menu--modifier}}{{/if}}"
+          role="menu"
+          aria-labelledby="{{overflow-menu--id}}-dropdown-toggle"
+          {{#unless dropdown--IsExpanded}}hidden{{/unless}}
+          {{#if dropdown-menu--attribute}}
+            {{{dropdown-menu--attribute}}}
+          {{/if}}>
+          {{> @partial-block}}
+        </ul>
+      {{/if}}
+    </div>
+  {{/unless}}
+  {{#if overflow-menu--UsesMenuToggle}}
+    {{> @partial-block}}
+  {{/if}}
 </div>
