--- a/src/patternfly/components/Table/templates/table--overflow-menu.hbs
+++ b/src/patternfly/components/Table/templates/table--overflow-menu.hbs
@@ -1,27 +1,33 @@
-{{#> overflow-menu overflow-menu--id=(concat table--id '-overflow-menu-' table-tr--index) dropdown-menu--modifier="pf-m-align-right"}}
-  {{#if table--overflow-menu--IsExpanded}}
+{{#> overflow-menu overflow-menu--id=(dasherize table--id table-tr--index 'overflow') table-td--UsesOverflowMenu=true overflow-menu--UsesMenuToggle=true}}
+  {{#if overflow-menu--IsControl}}
+    {{#> overflow-menu-control overflow-menu-button--aria-label="Table actions"}}
+      {{> menu-toggle menu-toggle--IsExpanded=menu--IsExpanded menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--aria-label='Actions'}}
+      {{#> menu}}
+        {{#> menu-content}}
+          {{#> menu-list}}
+            {{> menu-list-item menu-list-item--text='Start'}}
+            {{> menu-list-item menu-list-item--text='Stop'}}
+          {{/menu-list}}
+        {{/menu-content}}
+      {{/menu}}
+    {{/overflow-menu-control}}
+
+  {{else}}
+
     {{#> overflow-menu-content}}
       {{#> overflow-menu-group overflow-menu-group--modifier="pf-m-button-group"}}
         {{#> overflow-menu-item}}
-          {{#> button button--modifier="pf-m-primary"}}
+          {{#> button button--IsPrimary=true}}
             Start
           {{/button}}
         {{/overflow-menu-item}}
         {{#> overflow-menu-item}}
-          {{#> button button--modifier="pf-m-secondary"}}
+          {{#> button button--IsSecondary=true}}
             Stop
           {{/button}}
         {{/overflow-menu-item}}
       {{/overflow-menu-group}}
     {{/overflow-menu-content}}
-  {{else}}
-    {{#> overflow-menu-control dropdown--IsExpanded=table--overflow-menu--dropdown--IsExpanded overflow-menu-button--aria-label="Generic options"}}
-      {{#> overflow-menu-dropdown-item}}
-        Start
-      {{/overflow-menu-dropdown-item}}
-      {{#> overflow-menu-dropdown-item}}
-        Stop
-      {{/overflow-menu-dropdown-item}}
-    {{/overflow-menu-control}}
+
   {{/if}}
 {{/overflow-menu}}
