--- a/src/patternfly/components/Table/templates/table--toggle-all.hbs
+++ b/src/patternfly/components/Table/templates/table--toggle-all.hbs
@@ -1,5 +1,5 @@
 {{#if table-tr--expanded}}
-    {{#> table-td table-tr--expanded="true" table-td--toggle="true" table-td--button--attribute=(concat 'id="' table--id '-expandable-toggle-' table-tr--index '" aria-label="Collapse all" ')}}{{/table-td}}
+    {{#> table-td table-tr--expanded="true" table-td--IsToggle=true table-td--button--attribute=(concat 'id="' table--id '-expandable-toggle-' table-tr--index '" aria-label="Collapse all" ')}}{{/table-td}}
 {{else}}
-    {{#> table-td table-td--toggle="true" table-td--button--attribute=(concat 'id="' table--id '-expandable-toggle-' table-tr--index '" aria-label="Expand all" ')}}{{/table-td}}
+    {{#> table-td table-td--IsToggle=true table-td--button--attribute=(concat 'id="' table--id '-expandable-toggle-' table-tr--index '" aria-label="Expand all" ')}}{{/table-td}}
 {{/if}}
