--- a/src/patternfly/demos/Table/table-compact-table.hbs
+++ b/src/patternfly/demos/Table/table-compact-table.hbs
@@ -53,9 +53,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id "-dropdown-kebab-1") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{#> table-td table-td--action="true"}}{{/table-td}}
     {{/table-tr}}
 
     {{#> table-tr}}
@@ -85,9 +83,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id "-dropdown-kebab-2") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{#> table-td table-td--action="true"}}{{/table-td}}
     {{/table-tr}}
 
     {{#> table-tr}}
@@ -117,9 +113,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id "-dropdown-kebab-3") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{#> table-td table-td--action="true"}}{{/table-td}}
     {{/table-tr}}
 
     {{#> table-tr}}
@@ -149,9 +143,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Action link</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id "-dropdown-kebab-4") dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{#> table-td table-td--action="true"}}{{/table-td}}
     {{/table-tr}}
   {{/table-tbody}}
 {{/table}}
