--- a/src/patternfly/demos/Table/table-compound-expansion-table.hbs
+++ b/src/patternfly/demos/Table/table-compound-expansion-table.hbs
@@ -50,9 +50,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Open in Github</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-1') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{#> table-td table-td--action="true"}}{{/table-td}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true" table-tr--IsExpanded="true"}}
@@ -106,9 +104,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Open in Github</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-2') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{#> table-td table-td--action="true"}}{{/table-td}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true"}}
@@ -162,9 +158,7 @@
       {{#> table-td table-td--data-label="Action"}}
         <a href="#">Open in Github</a>
       {{/table-td}}
-      {{#> table-td table-td--action="true"}}
-        {{> dropdown dropdown--id=(concat table--id '-dropdown-kebab-3') dropdown-menu--modifier="pf-m-align-right" dropdown-toggle--IsPlain="true"}}
-      {{/table-td}}
+      {{#> table-td table-td--action="true"}}{{/table-td}}
     {{/table-tr}}
 
     {{#> table-tr table-tr--expandable="true"}}
