feat(calendar-month): add tokens (#6297)

--- a/src/patternfly/components/DatePicker/date-picker.scss
+++ b/src/patternfly/components/DatePicker/date-picker.scss
@@ -1,21 +1,24 @@
 // @debug $date-picker; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
 
-.#{$date-picker} {
+:where(:root),
+:where(.#{$date-picker}) {
   --#{$date-picker}--m-top__calendar--Top: 0;
-  --#{$date-picker}--m-top__calendar--TranslateY: calc(-100% - var(--#{$pf-global}--spacer--xs));
-  --#{$date-picker}__helper-text--MarginTop: var(--#{$pf-global}--spacer--xs);
+  --#{$date-picker}--m-top__calendar--TranslateY: calc(-100% - var(--pf-t--global--spacer--xs));
+  --#{$date-picker}__helper-text--MarginTop: var(--pf-t--global--spacer--sm);
   --#{$date-picker}__input--c-form-control--Width: calc(var(--#{$date-picker}__input--c-form-control--width-chars) * 1ch + var(--#{$date-picker}__input--c-form-control--width-base));
-  --#{$date-picker}__input--c-form-control--width-base: calc(var(--#{$pf-global}--spacer--xl) + var(--#{$pf-global}--spacer--sm)); // form control left/right padding + status icon width and spacer
-  --#{$date-picker}__input--c-form-control--width-chars: 10;
-  --#{$date-picker}__calendar--BackgroundColor: var(--#{$pf-global}--BackgroundColor--light-100);
-  --#{$date-picker}__calendar--BoxShadow: var(--#{$pf-global}--BoxShadow--md);
-  --#{$date-picker}__calendar--ZIndex: var(--#{$pf-global}--ZIndex--sm);
-  --#{$date-picker}__calendar--Top: calc(100% + var(--#{$pf-global}--spacer--xs));
+  --#{$date-picker}__input--c-form-control--width-base: calc(var(--pf-t--global--spacer--xl) + var(--pf-t--global--spacer--sm)); // form control left/right padding + status icon width and spacer
+  --#{$date-picker}__input--c-form-control--width-chars: 11;
+  --#{$date-picker}__calendar--BackgroundColor: var(--pf-t--global--background--color--floating--default);
+  --#{$date-picker}__calendar--BoxShadow: var(--pf-t--global--box-shadow--md);
+  --#{$date-picker}__calendar--ZIndex: var(--pf-t--global--Zindex--sm);
+  --#{$date-picker}__calendar--Top: calc(100% + var(--pf-t--global--spacer--xs));
   --#{$date-picker}__calendar--Right: auto;
   --#{$date-picker}__calendar--Left: 0;
   --#{$date-picker}__calendar--m-align-right--Right: 0;
   --#{$date-picker}__calendar--m-align-right--Left: auto;
+}
 
+.#{$date-picker} {
   position: relative;
   display: inline-block;
 }
@@ -61,11 +64,4 @@
     z-index: auto;
     min-width: min-content;
   }
-}
-
-// stylelint-disable no-invalid-position-at-import-rule
-@import "themes/dark/date-picker";
-
-@include pf-v5-theme-dark {
-  @include pf-v5-theme-dark-date-picker;
 }
