--- a/src/patternfly/components/Wizard/wizard.scss
+++ b/src/patternfly/components/Wizard/wizard.scss
@@ -58,7 +58,7 @@
   --#{$wizard}__nav-link--PaddingInlineEnd: var(--pf-t--global--spacer--sm);
   --#{$wizard}__nav-link--Color: var(--pf-t--global--text--color--subtle);
   --#{$wizard}__nav-link--TextDecoration: none;
-  --#{$wizard}__nav-link--BackgroundColor: transparent;
+  --#{$wizard}__nav-link--BackgroundColor: var(--pf-t--global--background--color--action--plain--default);
   --#{$wizard}__nav-link--BorderRadius: var(--pf-t--global--border--radius--small);
   --#{$wizard}__nav-link--hover--Color: var(--pf-t--global--text--color--subtle);
   --#{$wizard}__nav-link--hover--BackgroundColor: var(--pf-t--global--background--color--action--plain--clicked);
